--- a/src/app/bs-navbar/bs-navbar.component.html
+++ b/src/app/bs-navbar/bs-navbar.component.html
@@ -13,8 +13,11 @@
       <ul class="navbar-nav mr-auto">
       
           <li class="nav-item">
-              <span><a class="nav-link" routerLink="/about-us"> About us </a></span>
-            </li>
+            <span><a class="nav-link" routerLink="/about-us"> About us </a></span>
+          </li>
+          <li class="nav-item">
+            <span><a class="nav-link" routerLink="/coupon"> Coupon </a></span>
+          </li>
 
         <ng-template #anonymousUser>
             <li class="nav-item">
@@ -107,6 +110,8 @@
                 <i class="fas fa-sitemap"></i> Manage Orders</a>
               <a class="dropdown-item" routerLink="/admin/products">
                 <i class="fas fa-sitemap"></i> Manage Products</a>
+              <a class="dropdown-item" routerLink="/admin/coupon">
+                <i class="fas fa-sitemap"></i> Manage Coupons</a>
             </ng-container>
             <a class="dropdown-item" (click)="logout()">
                 <i class="fas fa-sign-out-alt"></i> Log Out</a>
