--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -46,8 +46,8 @@
               </ul>
             </div>
        <div class="col-sm-1">
-       
-          <img style="cursor: pointer; margin-top:-50px;" routerLink="/" src="../assets/icons/teamlogo.png" height="200" width="300" routerLink="/">
+       <!-- jun -->
+          <img class="text-center" style="cursor: pointer; margin-top:-50px;" routerLink="/" src="../assets/icons/teamlogo.png" height="100" width="150" routerLink="/">
        
         </div>
      </div>
