--- a/src/app/bs-navbar/bs-navbar.component.html
+++ b/src/app/bs-navbar/bs-navbar.component.html
@@ -1,4 +1,6 @@
 <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
   <div class="container">
     <img style="cursor: pointer" class="navbar-brand" routerLink="/" src="../assets/icons/teamlogo.png" height="42" width="42" class="navbar-brand" routerLink="/">
